# DroneGame2

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: macros.h
src/: GridTypeSupport.cpp  blackboard.c  blackboard.cpp  drone_dynamics.c  inspector_window.c  keyboard_manager.c  obstacles.cpp  targets_generator.cpp  watchdog.c
